[package]
name = "conqueue"
version = "0.1.0"
edition = "2021"
authors = ["Amidamaru <thaodt@users.noreply.github.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]


[dev-dependencies]
criterion = "0.4"

[[bench]]
name = "bench-lock"
harness = false
